@@ -103,4 +103,16 @@ localbitprec(128);bitprecision(bnfinit(P,1).reg,128)
 P=x^7+6*x^6+30*x^5+180*x^4+207*x^3+1242*x^2+378*x+2271;
 localbitprec(128); k=bnfinit(P); [k.no, bitprecision(k.reg,128)]
 
+P=x^7-37*x^6+664*x^5-7380*x^4+2648*x^3-416*x^2+32*x-1;
+localbitprec(128); bnfinit(P).no
+
+P=x^7+22*x^6+184*x^5+764*x^4+2020*x^3+3792*x^2+5712*x+4;
+localbitprec(128); bnfinit(P,1).no
+
+P=x^7+8*x^6+6*x^5-128*x^4+224*x^3+4608*x^2+12672*x+4;
+localbitprec(128); bnfinit(P,1).no
+
+P=x^7-22*x^6+169*x^5-568*x^4+1263*x^3-1506*x^2+2295*x+2;
+localbitprec(128); bnfinit(P,1).no
+
 \\ ERRORS: keep at end of file
